--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -3,7 +3,7 @@ name: Deploy Backend to Azure
 on:
   push:
     branches:
-      - main  # Oder dein Deployment-Branch
+      - develop  # Oder dein Deployment-Branch
 
 jobs:
   deploy:
