--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -16,24 +16,21 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18  # Oder deine Node.js-Version
-          cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
+          node-version: 18  # Oder deine Version
 
       - name: Install Dependencies
-        working-directory: backend
-        run: npm install
+        run: |
+          cd backend  # Wechsel in das Backend-Verzeichnis
+          npm install
 
       - name: Build Backend
-        working-directory: backend
-        run: npm run build  # Falls du ein Build-Skript hast
-
-      - name: Zip Backend
-        run: zip -r backend.zip backend
+        run: |
+          cd backend  # Wechsel in das Backend-Verzeichnis
+          npm run build  # Falls du ein Build-Skript hast
 
       - name: Deploy to Azure
         uses: azure/webapps-deploy@v2
         with:
           app-name: "coachinvoice-backend"
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: backend.zip
+          package: ./backend  # Package-Pfad für das Backend
